ajax searchbox and user_log report

--- a/app/views/cases/_search_form.html.erb
+++ b/app/views/cases/_search_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_tag(cases_path, method: :get,remote: true, class: "navbar-form", role: 'search', id: "search-form") do %>
 <div class="form-group pull-right">
 	<div class="input-group">
-		<%= text_field_tag 'search', nil, class: "form-control", placeholder: "search cases",title: "Enter to search" %>
+		<%= text_field_tag 'search', nil, class: "form-control", placeholder: "search cases",title: "Enter to search",id: "search_word" %>
 		<div class='input-group-btn'>
 			<%= button_tag(type: 'submit', class: "btn btn-large btn-search btn-primary") do %>
  				<i class="fa fa-search"></i> 
@@ -10,3 +10,11 @@
 	</div>
 </div><br><br>
 <% end %>
+<script type="text/javascript">
+$('#search_word').keyup(function() {
+  $.ajax({ type: "GET",   
+           url: "<%= cases_path %>",
+           data: {search: $('#search_word').val() },
+  });
+});
+</script>
