--- a/app/views/user_profiles/index.html.erb
+++ b/app/views/user_profiles/index.html.erb
@@ -14,7 +14,11 @@
                 <% end %> 
                 <%=link_to user_profile_path(user_profile) do%>
 				<%= user_profile.first_name.titleize + " " + user_profile.last_name.titleize %>
-			<%end %></td>
+			<%end %>
+				<div class= "pull-right" >
+				<%= rating_for user_profile, "ratings", disabled: true, imdb_avg: true%>
+				</div>
+			</td>
 			<% if user_profile.user.id==current_user.id %>
 				<td>
 					<%= link_to edit_user_profile_path(user_profile), class: "fa fa-fw fa-pencil-square-o", title: "Edit" do %><% end %>
