--- a/app/views/cases/_form.html.erb
+++ b/app/views/cases/_form.html.erb
@@ -51,7 +51,7 @@
           </div>
     
           <div class = "form-group">
-            <%= f.label :documents_atteched %>    
+            <%= f.label :documents_atteched %> <br>   
             <% @documents.each do |document| %>
               <%= document.doc_file_name %>
               <%= link_to "Delete", document_cases_path(document), method: :delete, data: { confirm: 'Are you sure?' }  %><br>
