--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -26,7 +26,7 @@
 						<p> <b><u>Experience: </u></b><%= @user_profile.experience %></p>
 						<% end %>
 						<table>
-							<% unless current_user.user_profile.id == @user_profile.id  %>	
+							<% unless (current_user.user_profile.present? && current_user.user_profile.id == @user_profile.id)  %>	
 							<tr><td>Give your Ratings:</td><td>
 							<%= (rating_for @user_profile,"ratings",:disable_after_rate => true, :enable_half => true, :half_show => true) %>
 							</td></tr>
