delete link design in show cases

--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -6,7 +6,7 @@
 	<div class="col-md-3">
 
 		<%= select_tag :case_type_id,options_from_collection_for_select(CaseType.all, :id, :case_type,
-            default_case_type(Case.first)),{class: "form-control",id: "type"} %>
+            default_case_type(Case.first)),{class: "form-control",id: "type",include_blank: "All"} %>
 		
 		</div><div class="col-md-6">
 			<%= render partial: "search_form" %>
