--- a/app/views/cases/show.html.erb
+++ b/app/views/cases/show.html.erb
@@ -52,7 +52,7 @@
             <a href="<%= "/documents/#{document.id}/#{document.doc_file_name}" %>" target='new'>  
               <%= document.doc_file_name %>
               </a><font color="red">
-              <%= link_to "Delete", document_cases_path(document,action1: "show"), method: :delete, data: { confirm: 'Are you sure?' }  %> </font><br>
+              <%= link_to "Delete", document_cases_path(document,action1: "show"),style: "color: red", method: :delete, data: { confirm: 'Are you sure?' }  %> </font><br>
             <% end %></span>
         <%else%>
         <span class="text"><%= show_documents %></span>
