--- a/app/views/cases/_cases.html.erb
+++ b/app/views/cases/_cases.html.erb
@@ -1,3 +1,4 @@
+<div id="user_case">
 <% @user_case.each do |user_case| %>
 <div class="row">
 <div class="col-md-1"></div>
@@ -5,16 +6,7 @@
 <div class = "box box-primary"><!--start box 2 -->
         <div class = "box-header with-border ">
           <h3 class = "box-title custom-header"><%= user_case.case_title.titleize %></h3><br>
-        </div>
-   <div class="box-body">
-   <dl class="dl-horizontal">
-   <dt>Location</dt><dd><%= user_case.location.titleize%></dd>
-   <dt>Type</dt><dd><%= user_case.case_type.case_type.titleize%></dd>
-   <dt>Amount</dt><dd><%= user_case.case_type.amount %>$</dd>
-   <dt>Status</dt><dd><%= user_case.status.titleize%></dd>
-   <dt>Details</dt><dd><%= user_case.case_detail %></dd>
-   
-
+    <div class="pull-right">
     <% if current_user.id == user_case.user_id %><br>
    <%= link_to "",case_path(user_case),class: "fa fa-fw fa-eye", title: "view" %>
     <%= link_to "", edit_case_path(user_case) ,class: "fa fa-fw fa-pencil-square-o", title: "Edit" %>
@@ -23,8 +15,37 @@
    <%= link_to "<img src='paypal2.png' align='right'>".html_safe,case_cases_path(user_case) if current_user.is_advocate? %>
    
 </div>
+  <div class="box-body">
+    <div class="row">
+      <div class="col-sm-3">
+        <i class="fa fa-fw fa-location-arrow"></i>
+        <%= user_case.location.titleize%>
 </div>
+      <div class="col-sm-3">
+        <span class="label label-primary"><%= user_case.case_type.case_type.titleize%></span>
 </div>
+      <div class="col-sm-3">
+        <i class="fa fa-fw fa-dollar"></i>
+        <%= user_case.case_type.amount %>$
 </div>
-<% end %>
+      <div class="col-sm-3">
+        <% if user_case.status.titleize == "Open"%>
+          <span class="label label-success"><%= user_case.status.titleize%></span>
+        <% else %>
+          <span class="label label-danger"><%= user_case.status.titleize%></span>
+        <% end %>
+      </div>
+    </div>
+    <br>
+    <dt><i class="fa fa-fw fa-file-text-o fa-lg"></i>Details</dt><dd>
 
+      <div><%= user_case.case_detail[0,20] %>
+        <a data-toggle="collapse" data-target="#demo<%= user_case.id %>">read more</a>
+        <div id="demo<%= user_case.id %>" class="collapse">
+          <%= user_case.case_detail%>
+        </div>
+      </div>
+  </div>
+</div><br>
+<% end %>
+</div>
