--- a/app/views/cases/_form.html.erb
+++ b/app/views/cases/_form.html.erb
@@ -1,3 +1,4 @@
+<% if @user_case.user_id == current_user.id %>
 <%= form_for @user_case, html: { :multipart => true }  do |f| %>
 <div class = "row">
   <div class = "col-md-6">
@@ -14,12 +15,12 @@
           </div>
 
           <div class = "form-group">
-            <%= f.label :Case_Title %><font color="red" class="pull-right">*</font>
+            <%= f.label :Case_Title %><font color="red">*</font>
             <%= f.text_field :case_title,class: "form-control",placeholder: "Enter Case title" %>
           </div>
 
           <div class = "form-group">
-            <%= f.label :Case_detail %><font color="red" class="pull-right">*</font>
+            <%= f.label :Case_detail %><font color="red">*</font>
             <%= f.text_area :case_detail,class: "form-control",placeholder: "Enter Case detail" %>
           </div>
         </div>
@@ -27,7 +28,7 @@
 
     </div>
 
-       <%= f.submit class: "btn btn-primary" %>    
+       <%= f.submit submit_value(@user_case),class: "btn btn-primary" %>    
   </div><!--end box 1 -->
 
     
@@ -40,7 +41,7 @@
         <div class = "col-md-12">
 
           <div class = "form-group">
-            <%= f.label :location %><font color="red" class="pull-right">*</font>
+            <%= f.label :location %><font color="red">*</font>
             <%= f.text_field :location,class: "form-control",placeholder: "Enter Case Location" %>
           </div> 
   
@@ -61,13 +62,12 @@
             <%= f.label :document %>
             <%= file_field_tag "document[]", type: :file, multiple: true %>
           </div>
-
-        
-  
-
         </div>
       </div>
       </div>
     </div>
   </div>
+<% end %>
+<% else %>
+<h3>you are not allowed to view this page</h3>
 <% end %>
