--- a/app/views/user_profiles/show.html.erb
+++ b/app/views/user_profiles/show.html.erb
@@ -6,64 +6,65 @@
 			</div>
 				<p>
 				<div class="row">
-					<div class= "col-md-4"><!--start inner box 1 -->
+					<div class= "col-md-5"><!--start inner box 1 -->
 
 						<% if @user_profile.avatar.exists? %>
-							&nbsp;&nbsp;<%= image_tag(@user_profile.avatar.url, class: "img-circle", height: "236", width: "236") %>
+							&nbsp;&nbsp;<%= image_tag(@user_profile.avatar.url, class: "img-circle", height: "135", width: "140") %>
 						<% else %> 
-							&nbsp;&nbsp;<%= image_tag("default.jpg", class: "img-circle", height: "236", width: "236") %>
+							&nbsp;&nbsp;<%= image_tag("default.jpg", class: "img-circle", height: "130", width: "130") %>
 						<% end %>
 					</div><!--end inner box 1 -->
 					<div class= "col-md-7 pull-right"><!--start inner box 2 -->
 						<h2 class="user-card-name">
-							<%= @user_profile.first_name.titleize + " " + @user_profile.last_name.titleize %>
+							<%= @user_profile.first_name.titleize + " " + @user_profile.last_name.titleize %>&nbsp;&nbsp;
 						</h2>
 						<div class="current-position"><i class="fa fa-fw fa-mortar-board"></i>
-						<%= @user_profile.user.role.title %>
-						</div>
+						<b><%= @user_profile.user.role.title %></b>
 						
-						<% if @user_profile.user.is_advocate? %>	
+						
+						<% if @user_profile.user.is_advocate? %>
+						<br><br>	
 						<p> <b><u>Experience: </u></b><%= @user_profile.experience %></p>
 						<% end %>
 						<table>
-							<% unless current_user.user_profile.id == @user_profile.id  %>	
-							<tr><td>Give your Ratings:</td><td>
-							<%= (rating_for @user_profile,"ratings",:disable_after_rate => true, :enable_half => true, :half_show => true) %>
-							</td></tr>
-							<% end %>
-							<tr><td>Average Ratings:</td>
-							<td><%= rating_for @user_profile, "ratings", disabled: true, imdb_avg: true %> </td>
-							</tr>
-						</table>
-					</div><!--end inner box 2 -->
-				</div>
-		</div>
-		<br>
-		
-			<% if @user_profile.user.id==current_user.id%>
-			<%= link_to 'Edit',edit_user_profile_path(current_user.user_profile.id), class: "btn btn-primary" %>
-			<%end %>
-			  <%= link_to 'Back',:back, class: "btn btn-primary" %>
-			  <br>
-	</div><!--end box 1 -->
+							<% unless current_user.user_profile.id == @user_profile.id  %>
+							<% if @user_profile.user.id!=current_user.id%>	
+							<tr><td><b>Give your Ratings:</b></td><td>
+	
 
-	<div class="col-md-4"><!--start box 2 -->
-		<div class = "box box-primary">
-			<div class="box-header with-border">
-				<h3 class="box-title custom-header">Address</h3>
-			</div>
+<%= (rating_for @user_profile,"ratings",:disable_after_rate => true, :enable_half => true, :half_show => true) %>
+							</td></tr>
+							<%end%>
+							<% end %>
+							<% if @user_profile.user.id!=current_user.id%>
+							<tr><td><b>Average Ratings:</b></td>
+							<td><%= rating_for @user_profile, "ratings",  imdb_avg: true, disabled: true%></td>
+							</tr>
+							<%end%>
+						</table>
 			<br>
-			&nbsp;&nbsp;&nbsp;<i class="fa fa-fw fa-male"></i>
-			<b>Gender:</b>&nbsp;&nbsp;<%= @user_profile.gender %><br><br>
-			&nbsp;&nbsp;&nbsp;<i class="fa fa-fw fa-mobile-phone"></i>
+			<i class="fa fa-fw fa-male"></i>
+			<b >Gender:</b>&nbsp;&nbsp;<%= @user_profile.gender %><br><br>
+			<i class="fa fa-fw fa-mobile-phone"></i>
 			<b>Contact:</b>&nbsp;&nbsp;<%= @user_profile.mobile_no %><br><br>
-			&nbsp;&nbsp;&nbsp;<i class="fa fa-fw fa-map-marker"></i>
-			<b>Address:</b><br>&nbsp;&nbsp;&nbsp;<%= @user_profile.address.titleize %><br>
-			&nbsp;&nbsp;&nbsp;<%= @user_profile.city.titleize %> -	
+			<i class="fa fa-fw fa-map-marker"></i>
+			<b>Address:</b>&nbsp;&nbsp;&nbsp;<%= @user_profile.address.titleize[0,14] %><%if @user_profile.address.titleize.size >14 %>-
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= @user_profile.address.titleize[14,28] %>
+			<%if @user_profile.address.titleize.size >28 %>-
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= @user_profile.address.titleize[28,42] %><%end%><%end%><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= @user_profile.city.titleize %> -	
 			<%= @user_profile.pincode %>
 			</p>
 			<br>
+			</div>
 			
-		</div>
-	</div><!--end box 2 -->
+		
+	<!--end box 2 -->
+
+
+
+<% if @user_profile.user.id==current_user.id%>
+			<%= link_to 'Edit',edit_user_profile_path(current_user.user_profile.id), class: "btn btn-primary" %>
+<%end %>
+			  <%= link_to 'Back',:back, class: "btn btn-primary  " %>
+</div>
 </div>
