--- a/app/views/cases/purchase_case.html.erb
+++ b/app/views/cases/purchase_case.html.erb
@@ -21,7 +21,10 @@
       <% end %>
       <td><%= payment.case.location.titleize %></td>
       <td><%= payment.case.case_type.amount %>$</td>
-      <td><%= payment.case.status.titleize %></td>
+      <td>
+        <b style="color: <%= case_status_style(payment.case) %>;" >
+        <%= payment.case.status.titleize %></b>
+      </td>
       <% if current_user.id == payment.case.user_id %>
       <td><%= link_to "",payment.case_path(payment.case),class: "fa fa-fw fa-eye", title: "view" %>
       </td>
