--- a/app/views/cases/index.html.erb
+++ b/app/views/cases/index.html.erb
@@ -5,13 +5,12 @@
 	<% if @user_case.present? %>
 	<div class="col-md-3">
 		<%= select_tag :case_type_id,options_from_collection_for_select(CaseType.all, :id, :case_type,
-            default_case_type(Case.first)),{class: "form-control",id: "type",include_blank: "All"} %>
+            default_case_type),{class: "form-control",id: "type",include_blank: "All"} %>
 	</div><div class="col-md-6">
 			<%= render partial: "search_form" %>
 		</div>
 		<div class="col-md-12">
 			<%= render partial: "cases" %>
-			<%= will_paginate @user_case, renderer: BootstrapPagination::Rails, class: "pull-right" %>
 			<% else %>
 			<p>No matching result found</p>
 			<% end %><br>
