bookmark with UI

--- a/app/views/cases/_cases.html.erb
+++ b/app/views/cases/_cases.html.erb
@@ -17,8 +17,8 @@
       <%= link_to "",user_case, method: :delete, data: { confirm: 'Are you sure?' },class: "fa fa-fw fa-trash", title: "delete" %>
       <% end %>
       <% if current_user.is_advocate? %>
-  <%=link_to "<i class='fa fa-bookmark-o' style='font-size:20px;color:red';></i></i>".html_safe,   favorite_cases_path(id: user_case.id, type: "favorite"), method: :put,remote: true ,id: "f#{user_case.id}"%>
-  <%=link_to "<i class='fa fa-bookmark-o' style='font-size:20px;' ></i></i>".html_safe, favorite_cases_path(id: user_case.id, type: "unfavorite"), method: :put,remote: true,id: "uf#{user_case.id}" %>
+  <%=link_to "<i class='fa fa-bookmark-o' style='font-size:20px;color:'blue';></i></i>".html_safe,   favorite_cases_path(id: user_case.id, type: "favorite"), method: :put,remote: true ,id: "f#{user_case.id}"%>
+  <%=link_to "<i class='fa fa-bookmark' style='font-size:20px;' ></i></i>".html_safe, favorite_cases_path(id: user_case.id, type: "unfavorite"), method: :put,remote: true,id: "uf#{user_case.id}" %>
 <% end %>&nbsp;&nbsp;&nbsp;&nbsp;
       <%= link_to "<img src='paypal2.png' align='right'>".html_safe,case_cases_path(user_case) if current_user.is_advocate? %>
     </div><br>
@@ -45,9 +45,9 @@
       </div>
     </div>
     <br>
-    <dt><i class="fa fa-fw fa-file-text-o fa-lg"></i>Details</dt><dd><p>
-
-      <div><%= user_case.case_detail[0,20] %>
+    
+    <p>
+      <div><%= user_case.case_detail[0,80] %>
         <a data-toggle="collapse" data-target="#demo<%= user_case.id %>">read more</a>
         <div id="demo<%= user_case.id %>" class="collapse">
           <%= user_case.case_detail%>
