--- a/app/views/cases/_form.html.erb
+++ b/app/views/cases/_form.html.erb
@@ -62,6 +62,12 @@
             <%= f.label :document %>
             <%= file_field_tag "document[]", type: :file, multiple: true %>
           </div>
+
+
+          <div class = "form-group">
+            <%= f.label :tag_list %><font color="red">*</font>
+            <%= f.text_area :tag_list,class: "form-control",placeholder: "Enter Tags for better search" %>
+          </div>
         </div>
       </div>
       </div>
