--- a/app/views/cases/_cases.html.erb
+++ b/app/views/cases/_cases.html.erb
@@ -1,6 +1,7 @@
 <div id="user_case">
 <% if @user_case.any?%>  
 <% @user_case.each do |user_case| %>
+<% user_case=user_case.case if @favorite %>
 <div class = "box box-primary"><!--start box 2 -->
   <div class = "box-header with-border ">
     <h3 class = "box-title custom-header"><%= user_case.case_title.titleize %></h3>&nbsp;&nbsp;
@@ -17,10 +18,10 @@
       <%= link_to "",user_case, method: :delete, data: { confirm: 'Are you sure?' },class: "fa fa-fw fa-trash", title: "delete" %>
       <% end %>
       <% if current_user.is_advocate? %>
-  <%=link_to "<i class='fa fa-bookmark-o' style='font-size:20px;color:'blue';></i></i>".html_safe,   favorite_cases_path(id: user_case.id, type: "favorite"), method: :put,remote: true ,id: "f#{user_case.id}"%>
-  <%=link_to "<i class='fa fa-bookmark' style='font-size:20px;' ></i></i>".html_safe, favorite_cases_path(id: user_case.id, type: "unfavorite"), method: :put,remote: true,id: "uf#{user_case.id}" %>
+  <%=link_to "<i class='fa fa-bookmark-o' style='font-size:20px;color:'blue';></i></i>".html_safe,   favorite_cases_path(id: user_case.id, type: "favorite"), title: "Bookmark this case", method: :put,remote: true ,id: "f#{user_case.id}"%>
+  <%=link_to "<i class='fa fa-bookmark' style='font-size:20px;' ></i></i>".html_safe, favorite_cases_path(id: user_case.id, type: "unfavorite"), title: "Remove bookmark", method: :put,remote: true,id: "uf#{user_case.id}" %>
 <% end %>&nbsp;&nbsp;&nbsp;&nbsp;
-      <%= link_to "<img src='paypal2.png' align='right'>".html_safe,case_cases_path(user_case) if current_user.is_advocate? %>
+      <%= link_to image_tag("paypal2.png"),case_cases_path(user_case) if current_user.is_advocate? %>
     </div><br>
    </div>
   <div class="box-body">
@@ -33,7 +34,7 @@
         <%= link_to "<span class='label label-primary'> #{user_case.case_type.case_type.titleize} </span>".html_safe,
          cases_path(case_type: user_case.case_type.case_type),remote: true %>
       </div>
-      <div class="col-sm-3">_
+      <div class="col-sm-3">
         <i class="fa fa-fw fa-dollar"></i>
         <%= user_case.case_type.amount %>$
       </div>
@@ -47,19 +48,35 @@
     </div>
     <br>
     
-    <p>
-      <div><%= user_case.case_detail[0,80] %>
-        <a data-toggle="collapse" data-target="#demo<%= user_case.id %>">read more</a>
-        <div id="demo<%= user_case.id %>" class="collapse">
-          <%= user_case.case_detail%>
-        </div>
+      <div id="div_short<%=user_case.id%>">
+        <%= user_case.case_detail[0,80] %>
+        <a id="link_short<%=user_case.id%>">Read More</a>
       </div>
+
+      <div id="div_open<%=user_case.id%>">
+        <%= user_case.case_detail %>
+        <a id="link_open<%=user_case.id%>">Read less</a>
+      </div>
+      
     </p>
   </div>
 </div><br>
 
 <script>
-$("#f<%=user_case.id%>").click(function(){
+  $("#div_open<%=user_case.id%>").hide()
+
+  $("#link_short<%=user_case.id%>").click(function(){
+  $("#div_short<%=user_case.id%>").hide()
+  $("#div_open<%=user_case.id%>").show()
+});
+
+  $("#link_open<%=user_case.id%>").click(function(){
+  $("#div_open<%=user_case.id%>").hide()
+  $("#div_short<%=user_case.id%>").show()
+});
+
+
+  $("#f<%=user_case.id%>").click(function(){
   $("#f<%=user_case.id%>").hide()
   $("#uf<%=user_case.id%>").show()
 });
@@ -83,3 +100,4 @@ $("#uf<%=user_case.id%>").click(function(){
 <b>No matching records found</b>
 <% end %>
 <%= paginate @user_case, renderer: BootstrapPagination::Rails, class: "pull-right" %>
+</div>
