--- a/app/views/admins/user_log.html.erb
+++ b/app/views/admins/user_log.html.erb
@@ -3,6 +3,7 @@
 		<h3 class="box-title custom-header">Users' log information</h3>
 	</div>
 	<div class="box-body">
+	<div id="btnPrint1">
 		<% if @users.any? %>
 		<table class="table table-bordered table-hover dataTable">
 			<thead>
@@ -33,5 +34,6 @@
 		<% else %>
 		<p> No Records Found</p>
 		<% end %>
+		</div>
 	</div>
 </div>
