--- a/app/views/admins/user_log.html.erb
+++ b/app/views/admins/user_log.html.erb
@@ -1,3 +1,5 @@
+<div class="box box-primary">
+<div id="printableArea">
 <% if @users.any? %>
 <table class="table table-bordered table-hover dataTable">
 	<thead>
@@ -5,9 +7,9 @@
 		 	<th>No</th>
 		 	<th>Email</th>
 		 	<th>Role</th>
-		 	<th>Confirm at</th>
-		 	<th>Last Login at</th>
-		 	<th>IP from last Login</th>
+		 	<th>Confirm At</th>
+		 	<th>Last Login At</th>
+		 	<th>IP From Last Login</th>
 		 	<th>Failed attempts</th>
 		</tr>
 	</thead>
@@ -16,15 +18,31 @@
 			<tr>
 				<td><%= index+1 %></td>
 				<td><%= user.email %></td>
-				<td><%= user.role.title %></td>
-				<td><%= user.confirmed_at %></td>
-				<td><%= user.last_sign_in_at %></td>
+				<td><%= user.role.title.titleize %></td>
+				<td><%= user.confirmed_at.strftime("%d-%m-%Y %H:%M:%S")%></td>
+				<td><%= user.last_sign_in_at.strftime("%d-%m-%Y %H:%M:%S") %></td>
 				<td><%= user.last_sign_in_ip %></td>
 				<td><%= user.failed_attempts %></td>
 	    </tr>
 	<% end %>
 	</tbody>    
 </table>
+</div>
+<input type="button" onclick="printDiv('printableArea')" value="Print" class="btn btn-primary pull-right"/>
 <% else %>
 <p> No Records Found</p>
 <% end %>
+
+</div>
+<script type="text/javascript">
+function printDiv(divName) {
+     var printContents = document.getElementById(divName).innerHTML;
+     var originalContents = document.body.innerHTML;
+
+     document.body.innerHTML = printContents;
+
+     window.print();
+
+     document.body.innerHTML = originalContents;
+}
+</script>
