--- a/app/views/admins/user_payment.pdf.erb
+++ b/app/views/admins/user_payment.pdf.erb
@@ -1,1 +1,34 @@
-<h1>Pdf</h1>
+
+<% total=0 %>
+<table cellspacing="15px" sortable="sortable">
+	<thead>
+		<tr>
+			<th>No</th>
+			<th>Case Title</th>
+		 	<th>Case Type</th>
+		 	<th>Client Name</th>
+		 	<th>Advocate Name</th>
+		 	<th>Amount</th>
+		 	<th>Purchased Date</th>
+
+		 	
+		</tr>
+	</thead>
+	<tbody>
+	<% @payment.each.with_index do |payment,index|%>
+	   <% total+=payment.case.case_type.amount %>
+			<tr>
+
+				<td align="center"><%= index+1 %></td>
+				<td align="center"><%=payment.case.case_title.titleize%></td>
+				<td align="center"><%=payment.case.case_type.case_type.titleize %></td>
+				<td align="center"><%=payment.case.user.user_profile.first_name.titleize + " "+payment.case.user.user_profile.last_name.titleize %></td>
+				<td align="center"><%=payment.user.user_profile.first_name.titleize+" "+payment.user.user_profile.last_name.titleize %></td>
+				<td align="center"><%=payment.case.case_type.amount %>$</td>
+				<td align="center"><%=payment.purchased_at.strftime("%d/%m/%Y") %></td>
+				
+	    </tr>
+	<% end %>
+	</tbody>
+</table>
+
